tests/paczka2/big_fuzzy/35891870.err
Error in line 1: vkwH S580 29,2
Error in line 6: ZLM9J A62 90,6
Error in line 2: XVVNwvi A62 55,4
Error in line 23: XVVNwvi A47 7,6
Error in line 18: vkwH S580 81,0
Error in line 37: Jsm A47 54,20
Error in line 39: S580 A47 18,6
Error in line 41: Jsm A47 108,0
Error in line 28: IYLwQ8T5 A47 185,2
Error in line 38: XVVNwvi A47 0,4
Error in line 45: SUMFuM30ZD S580 50,5
Error in line 53: Jsm S580 413,60
Error in line 61: S580 A62 88,7
Error in line 62: ZLM9J A159 96,9
Error in line 75: XVVNwvi A159 216,8
Error in line 73: SUMFuM30ZD A62 46,7
Error in line 80: SUMFuM30ZD S580 75,9
Error in line 83: vkwH S580 26,65
Error in line 88: XVVNwvi A159 7,3
Error in line 103: IYLwQ8T5 S580 88,0
Error in line 105: ZLM9J A47 75,1
Error in line 106: ZLM9J A62 84,7
Error in line 60: Jsm S580 54,6
Error in line 114: Jsm A62 60,6
Error in line 112: IYLwQ8T5 A62 40,4
Error in line 124: vkwH S580 13,8
Error in line 101: SUMFuM30ZD A47 114,6
Error in line 125: S580 A62 60,9
Error in line 130: S580 S580 62,3
Error in line 133: vkwH S5R0 16,2
Error in line 135: XVVNwvi A47 96,1
Error in line 144: XVVNwvi A62 43,7
Error in line 156: ZLM9J S580 43,8
Error in line 168: ZLM9J A159 94,6
Error in line 173: vkwH A62 15,5
Error in line 184: SUMFuM30ZD A47 12,9
Error in line 228: vkwH S580 1,4
Error in line 233: Jsm A62 50,7
Error in line 235: Jsm S580 26,8
Error in line 244: XVVNwvi A159 3,7
